--- a/NextCloud/Docker Compose/02_services.yaml
+++ b/NextCloud/Docker Compose/02_services.yaml
@@ -9,3 +9,6 @@ services:
       - ./nextcloud-data:/var/www/html
     networks:
       - ecosystem
+    environment:
+      - NEXTCLOUD_ADMIN_USER=nextadmin
+      - NEXTCLOUD_ADMIN_PASSWORD=nextadmin
