--- a/Nginx/Docker Compose/02_services.yaml
+++ b/Nginx/Docker Compose/02_services.yaml
@@ -3,7 +3,8 @@ services:
     image: nginx:latest
     container_name: nginx
     networks:
-      - ecosystem
+      ecosystem:
+        ipv4_address: 172.xx.xx.xx
     ports:
       - "80:80"
     volumes:
