--- a/Nginx/Docker Compose/02_services.yaml
+++ b/Nginx/Docker Compose/02_services.yaml
@@ -2,6 +2,7 @@ services:
   nginx:
     image: nginx:latest
     container_name: nginx
+    hostname: nginx
     networks:
       ecosystem:
         ipv4_address: 172.xx.xx.xx
