--- a/Nginx/Nginx Conf/03_.http.conf
+++ b/Nginx/Nginx Conf/03_.http.conf
@@ -13,7 +13,7 @@ http {
 
     server {
         listen       80;
-        server_name  localhost;
+        server_name  localhost; #Ngixnをデプロイしているドメイン名を記載する
 
         location / {
             root   /usr/share/nginx/html;
