--- a/Nginx/Docker Compose/02_services.yaml
+++ b/Nginx/Docker Compose/02_services.yaml
@@ -11,3 +11,5 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf:ro  # カスタム設定を使用する場合
       - ./html:/usr/share/nginx/html:ro  # 静的なHTMLファイルを提供する場合
+      - ./ssl/certs:/etc/ssl/certs  # SSL証明書をホストからコンテナにマウント
+      - ./ssl/private:/etc/ssl/private  # 秘密鍵をホストからコンテナにマウント
